Fixing the baseline alignment for button icons.

--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -37,6 +37,7 @@ body {
   display: inline-block;
   border: gray;
   text-align: center;
+  vertical-align: baseline;
   min-width: 1em;
   margin: 0 0.25em;
   padding: 0 0.05em;
